@@ -2,6 +2,7 @@ Current
 
 Current
 
+Added: commandDescriptionKey to @Parameters, to allow internationalized command descriptions
 Fixed: GITHUB-73: descriptionKey was being ignored on main parameters
 
 1.18
